--- a/roles/sigsum/defaults/main.yml
+++ b/roles/sigsum/defaults/main.yml
@@ -66,6 +66,10 @@ sigsum_allowlist_domains: []
 # TODO: this option is confusing and should likely not be here.
 sigsum_logname: sigsum
 
+# This option determines where in the sigsum user's home directory to store
+# configuration.  TODO: it might be cleaner to always use the below value.
+sigsum_configdir_base: ".config/sigsum"
+
 ################################################################################
 #                            Database configuration                            #
 ################################################################################
@@ -152,7 +156,7 @@ sigsum_key_file: ""
 
 # Ignored unless sigsum_role == "primary"
 sigsum_policy_file: ""
-sigsum_rate_limit_file: "{{ sigsum_home }}/.config/sigsum/{{ sigsum_logname }}/rate-limits.config"
+sigsum_rate_limit_file: "{{ sigsum_home }}/{{ sigsum_configdir_base }}/{{ sigsum_logname }}/rate-limits.config"
 sigsum_allow_test_domain: false
 sigsum_secondary_url: ""  # where the secondary log's internal endpoint is served
 sigsum_secondary_pubkey_file: ""
