Make golang a dependency of sigsum role
The sigsum role used to install Go, so this ensures continuity.

--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -5,14 +5,13 @@
     - sigsum-secondary
   roles:
     - sigsum.ansible.mariadb
-    - sigsum.ansible.golang
     - sigsum.ansible.sigsum
 
 - name: Setup a primary log with ssh-agent
   hosts: sigsum-primary-ssh-agent
   roles:
     - role: sigsum.ansible.mariadb
-    - role: sigsum.ansible.golang
+    - role: sigsum.ansible.golang  # Go is assumed for sigsum_agent
     - role: sigsum.ansible.sigsum_agent
     - role: sigsum.ansible.sigsum
       sigsum_ssh_auth_sock: "{{ sigsum_agent_socket }}"
