--- a/molecule/default/host_vars/sigsum-primary-ssh-agent.yml
+++ b/molecule/default/host_vars/sigsum-primary-ssh-agent.yml
@@ -51,3 +51,7 @@ sigsum_tools_from_sigsum_go:
   - { name: "sigsum-key" }  # needed by sigsum role
   - { name: "sigsum-submit" }  # needed by verify.yml
   - { name: "sigsum-verify" }  # needed by verify.yml
+
+# Go compiler settings
+golang_ensure_min_version: true
+golang_debian_use_backports: true
