--- a/roles/sigsum_agent/handlers/main.yml
+++ b/roles/sigsum_agent/handlers/main.yml
@@ -1,12 +1,12 @@
 ---
-- name: "Reload systemd daemon (--user {{ sigsum_agent_user }})"
+- name: Reload systemd daemon
   ansible.builtin.systemd:
     daemon_reload: true
     scope: user
   become_user: "{{ sigsum_agent_user }}"
   become: true
 
-- name: "Restart sigsum-agent socket (--user {{ sigsum_agent_user }})"
+- name: Restart sigsum-agent socket
   ansible.builtin.systemd:
     name: sigsum-agent.socket
     state: restarted
@@ -14,7 +14,7 @@
   become_user: "{{ sigsum_agent_user }}"
   become: true
 
-- name: "Restart sigsum-agent service (--user {{ sigsum_agent_user }})"
+- name: Restart sigsum-agent service
   ansible.builtin.systemd:
     name: sigsum-agent.service
     state: restarted
@@ -22,7 +22,7 @@
   become_user: "{{ sigsum_agent_user }}"
   become: true
 
-- name: "Enable sigsum-agent socket (--user {{ sigsum_agent_user }})"
+- name: Enable sigsum-agent socket
   ansible.builtin.systemd:
     name: sigsum-agent.socket
     enabled: true
@@ -30,7 +30,7 @@
   become_user: "{{ sigsum_agent_user }}"
   become: true
 
-- name: "Enable sigsum-agent service (--user {{ sigsum_agent_user }})"
+- name: Enable sigsum-agent service
   ansible.builtin.systemd:
     name: sigsum-agent.service
     enabled: true
