--- a/molecule/sigsum_agent/converge.yml
+++ b/molecule/sigsum_agent/converge.yml
@@ -3,8 +3,5 @@
   hosts: all
   become: true
   roles:
-    - role: sigsum.ansible.golang
-    - role: sigsum.ansible.sigsum_agent
-      sigsum_agent_user: svc1-sigsum-agent
-    - role: sigsum.ansible.sigsum_agent
-      sigsum_agent_user: svc2-sigsum-agent
+    - sigsum.ansible.golang
+    - sigsum.ansible.sigsum_agent
