--- a/roles/sigsum_agent/tasks/main.yml
+++ b/roles/sigsum_agent/tasks/main.yml
@@ -56,7 +56,7 @@
 
 - name: Trigger handlers
   ansible.builtin.command: "/bin/true"
-  notify: "Restart sigsum-agent service (--user {{ sigsum_agent_user }})"
+  notify: Restart sigsum-agent service
   when: sigsum_agent_binchecksum != sigsum_agent_bininfo.stat.checksum
 
 ###
@@ -76,7 +76,7 @@
     group: "{{ sigsum_agent_user }}"
     mode: '0600'
   when: sigsum_agent_soft_key is defined
-  notify: "Restart sigsum-agent service (--user {{ sigsum_agent_user }})"
+  notify: Restart sigsum-agent service
 
 - name: Add sigsum-agent yubihsm credentials
   ansible.builtin.copy:
@@ -86,7 +86,7 @@
     group: "{{ sigsum_agent_user }}"
     mode: '0600'
   when: sigsum_agent_yubihsm_passphrase is defined
-  notify: "Restart sigsum-agent service (--user {{ sigsum_agent_user }})"
+  notify: Restart sigsum-agent service
 
 ###
 # Configure systemd
@@ -109,9 +109,9 @@
     group: "{{ sigsum_agent_user }}"
     mode: '0600'
   notify:
-    - "Reload systemd daemon (--user {{ sigsum_agent_user }})"
-    - "Restart sigsum-agent socket (--user {{ sigsum_agent_user }})"
-    - "Enable sigsum-agent socket (--user {{ sigsum_agent_user }})"
+    - Reload systemd daemon
+    - Restart sigsum-agent socket
+    - Enable sigsum-agent socket
 
 - name: Configure systemd sigsum-agent service
   ansible.builtin.template:
@@ -121,6 +121,6 @@
     group: "{{ sigsum_agent_user }}"
     mode: '0600'
   notify:
-    - "Reload systemd daemon (--user {{ sigsum_agent_user }})"
-    - "Restart sigsum-agent service (--user {{ sigsum_agent_user }})"
-    - "Enable sigsum-agent service (--user {{ sigsum_agent_user }})"
+    - Reload systemd daemon
+    - Restart sigsum-agent service
+    - Enable sigsum-agent service
