sigsum_agent: use /run
/var/run has moved to /run, cf. https://refspecs.linuxfoundation.org/FHS_3.0/fhs-3.0.html#varrunRuntimeVariableData

--- a/roles/sigsum_agent/defaults/main.yml
+++ b/roles/sigsum_agent/defaults/main.yml
@@ -7,7 +7,7 @@ sigsum_agent_goversion: "v0.2.3"
 # group `sigsum_agent_user`.  Sign using the `sigsum_agent_socket` UNIX socket.
 sigsum_agent_user: "svc-sigsum-agent"
 sigsum_agent_home: "/var/lib/{{ sigsum_agent_user }}"
-sigsum_agent_run: "/var/run/{{ sigsum_agent_user }}"
+sigsum_agent_run: "/run/{{ sigsum_agent_user }}"
 sigsum_agent_socket: "{{ sigsum_agent_run }}/sigsum-agent.socket"
 
 #
