Add litewitness role
Thanks ln5 for review and comments!

--- a/molecule/common/prepare_debian.yml
+++ b/molecule/common/prepare_debian.yml
@@ -13,6 +13,7 @@
       name:
         - sudo
         - systemd
+        - sqlite3  # litewitness
       state: present
 
   - name: Install debug tooling
