Fix example commands for litewitness role variables
The sigsum-key sub-commands "hash" and "hex" used
in the example of how to generate values for
litewitness role/host variables doesn't seem to be
valid anymore. Prepending "to-" does however seem
to fix the issue:

```
sigsum-key to-hash
sigsum-key to-hex
```

--- a/molecule/litewitness/host_vars/bookworm.yml
+++ b/molecule/litewitness/host_vars/bookworm.yml
@@ -29,12 +29,12 @@ sigsum_agent_soft_key: |
 #
 # Derive keygrip:
 #
-#   $ sigsum-key hash -k /tmp/witness-key.pub
+#   $ sigsum-key to-hash -k /tmp/witness-key.pub
 #
 # Derive log key:
 #
 #   $ ssh-keygen -t ed25519 -f /tmp/log-key -C "molecule:testonly"
-#   $ cat /tmp/log-key.pub | sigsum-key hex
+#   $ cat /tmp/log-key.pub | sigsum-key to-hex
 #
 # The test vector in verify.yml is derived as follows:
 #
