Move away from legacy /var/run
Cf. https://refspecs.linuxfoundation.org/FHS_3.0/fhs/ch05s13.html

Closes: https://git.glasklar.is/glasklar/services/sigsum-logs/-/issues/39

--- a/molecule/sigsum_agent/verify.yml
+++ b/molecule/sigsum_agent/verify.yml
@@ -31,7 +31,7 @@
 
     - name: Sign message and fail because of group permissions
       ansible.builtin.shell: |
-        export SSH_AUTH_SOCK="/var/run/{{ test_grp }}/sigsum-agent.socket"
+        export SSH_AUTH_SOCK="/run/{{ test_grp }}/sigsum-agent.socket"
         ssh-keygen -Y sign -n testonly -f "{{ test_home }}/key.pub" "{{ test_home }}/msg"
       become_user: "{{ test_user }}"
       become: true
@@ -51,7 +51,7 @@
 
     - name: Sign message
       ansible.builtin.shell: |
-        export SSH_AUTH_SOCK="/var/run/{{ test_grp }}/sigsum-agent.socket"
+        export SSH_AUTH_SOCK="/run/{{ test_grp }}/sigsum-agent.socket"
         ssh-keygen -Y sign -n testonly -f "{{ test_home }}/key.pub" "{{ test_home }}/msg"
       become_user: "{{ test_user }}"
       become: true
