--- a/molecule/sigsum_agent/verify.yml
+++ b/molecule/sigsum_agent/verify.yml
@@ -36,7 +36,9 @@
       become_user: "{{ test_user }}"
       become: true
       register: sign
-      ignore_errors: true
+      failed_when: >
+        (sign.rc != 0) and
+        ("No private key found" not in sign.stderr)
 
     - name: Assert that signing failed
       ansible.builtin.assert:
