Use failed_when instead of ignore_errors also for keyread check

--- a/molecule/sigsum_agent/verify.yml
+++ b/molecule/sigsum_agent/verify.yml
@@ -69,7 +69,9 @@
       become_user: "{{ test_user }}"
       become: true
       register: keyread
-      ignore_errors: true
+      failed_when: >
+        (keyread.rc != 0) and
+        ("Permission denied" not in keyread.stderr)
 
     - name: Assert that private key reading failed
       ansible.builtin.assert:
