--- a/molecule/common/prepare_debian.yml
+++ b/molecule/common/prepare_debian.yml
@@ -12,6 +12,7 @@
     ansible.builtin.apt:
       name:
         - sudo
+        - procps # kill command, needed for service reload
         - systemd
         - sqlite3  # litewitness
       state: present
