Make litebastion an instantiated service
Change litebastion.service to litebastion@{{ litebastion_user }}.service
to make it easier to run several litebastion instances.

Closes https://git.glasklar.is/sigsum/admin/ansible/-/issues/59

--- a/molecule/litebastion/tests/update-backend-do.yml
+++ b/molecule/litebastion/tests/update-backend-do.yml
@@ -2,7 +2,7 @@
 - name: "Update backends.conf: side-affect"
   hosts: all
   vars_files:
-    - ../../../roles/litebastion/defaults/main.yml
+    - ../host_vars/bookworm.yml
   tasks:
     - name: Update backends.conf
       ansible.builtin.lineinfile:
